--- a/src/pages/Crew/Crew.module.css
+++ b/src/pages/Crew/Crew.module.css
@@ -23,6 +23,12 @@
   }
 }
 
+@media screen and (min-width: 64em) {
+  :global(.grid).crewSectionWrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media only screen and (min-width: 85em) {
   :global(.grid).crewSectionWrapper {
     grid-template-columns: minmax(327px, 627px) 1fr;
